# docs/swagger.json
@@ -1860,6 +1860,10 @@
                     "description": "OutputPrice 输出 Token 价格（智慧果/1K Token）",
                     "type": "integer"
                 },
+                "per_req_price": {
+                    "description": "PerReqPrice 每次请求价格（智慧果/次）",
+                    "type": "integer"
+                },
                 "prompt": {
                     "description": "Prompt 全局的系统提示语",
                     "type": "string"
